--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       color: #0f172a;
     }
 
-    /* ================= HEADER ================= */
+    /* HEADER */
     header {
       height: 80px;
       background: #ffffff;
@@ -82,7 +82,7 @@
       color: white;
     }
 
-    /* ================= LAYOUT ================= */
+    /* LAYOUT */
     .app {
       min-height: calc(100vh - 80px);
       display: flex;
@@ -124,7 +124,7 @@
       margin-top: 4px;
     }
 
-    /* ================= SECTIONS ================= */
+    /* SECTIONS */
     .page {
       display: none;
       animation: slideIn 0.6s ease forwards;
@@ -145,7 +145,7 @@
       }
     }
 
-    /* ================= TYPOGRAPHY ================= */
+    /* TYPOGRAPHY */
     .welcome {
       color: #ff7a18;
       font-weight: 600;
@@ -200,6 +200,43 @@
       display: inline-block;
       margin-top: 10px;
     }
+
+    /* RESUME */
+    .resume-frame {
+      height: 60vh;
+      margin-bottom: 24px;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+    }
+
+    .resume-actions {
+      display: flex;
+      gap: 20px;
+    }
+
+    .resume-actions a {
+      padding: 12px 28px;
+      border-radius: 30px;
+      font-weight: 600;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    .preview-btn {
+      background: #ff7a18;
+      color: white;
+    }
+
+    .download-btn {
+      border: 2px solid #ff7a18;
+      color: #ff7a18;
+    }
+
+    .download-btn:hover {
+      background: #ff7a18;
+      color: white;
+    }
   </style>
 </head>
 
@@ -219,13 +256,13 @@
     <a onclick="show('projects')">Projects</a>
     <a onclick="show('education')">Education</a>
     <a onclick="show('achievements')">Achievements</a>
+    <a onclick="show('contact')">Contact</a>
     <a class="resume-btn" onclick="show('resume')">Resume</a>
   </nav>
 </header>
 
 <div class="app">
 
-  <!-- LEFT CONTENT -->
   <div class="content">
 
     <!-- HOME -->
@@ -236,9 +273,7 @@
       <p>
         Enterprise Data Analyst with 4 years of professional experience delivering
         scalable business intelligence solutions, KPI-driven dashboards, and
-        data-backed insights. Known for bridging the gap between business needs
-        and analytical solutions through strong stakeholder collaboration and
-        technical expertise.
+        data-backed insights.
       </p>
       <a class="contact-btn" onclick="show('contact')">Contact Me</a>
     </section>
@@ -246,85 +281,32 @@
     <!-- ABOUT -->
     <section id="about" class="page">
       <h1>About Me</h1>
-
       <p>
         I am a data professional with 4 years of hands-on experience, most recently
-        working as a Data Analyst (Power BI Developer) at NIQ, a global market
-        research organization with over a century of industry presence.
+        working as a Data Analyst (Power BI Developer) at NIQ.
       </p>
-
       <p>
-        I work across the complete analytics lifecycle, collaborating closely with
-        business stakeholders to understand requirements, prepare and transform
-        data, and deliver meaningful dashboards that support strategic and
-        operational decision-making.
-      </p>
-
-      <p>
-        My approach combines strong business understanding with technical depth,
-        enabling me to design analytical solutions that are both insightful and
-        scalable.
-      </p>
-
-      <h3>Key Responsibilities</h3>
-      <ul>
-        <li>Data gathering and preparation from multiple sources</li>
-        <li>Stakeholder requirement discussions and KPI definition</li>
-        <li>Power BI dashboard development and enhancement</li>
-        <li>Semantic model design and Row-Level Security (RLS)</li>
-      </ul>
-
-      <h3>Tools & Technologies</h3>
-      <p>
-        Power BI, DAX, Advanced Excel, SQL Server, MySQL, SSMS, VBA, Python,
-        Tableau
-      </p>
-
-      <h3>Career Focus</h3>
-      <p>
-        Data Analyst | Power BI Developer | Data Scientist
+        I work across the complete analytics lifecycle, combining business
+        understanding with technical expertise to deliver scalable solutions.
       </p>
     </section>
 
-    <!-- EXPERIENCE -->
-    <section id="experience" class="page">
-      <h1>Experience</h1>
-      <p>NIQ — Data Analyst / Power BI Developer (Jan 2023 – Nov 2025)</p>
-      <p>Retail Analytics — Data Analyst (Previous Experience)</p>
-    </section>
+    <!-- EMPTY SECTIONS -->
+    <section id="experience" class="page"><h1>Experience</h1></section>
+    <section id="skills" class="page"><h1>Skills</h1></section>
+    <section id="projects" class="page"><h1>Projects</h1></section>
+    <section id="education" class="page"><h1>Education</h1></section>
+    <section id="achievements" class="page"><h1>Achievements</h1></section>
 
-    <!-- SKILLS -->
-    <section id="skills" class="page">
-      <h1>Skills</h1>
-      <p>Business Intelligence, Data Analysis, Dashboard Design, Stakeholder Management</p>
-    </section>
-
-    <!-- PROJECTS -->
-    <section id="projects" class="page">
-      <h1>Projects</h1>
-      <p>Power BI dashboards, KPI reporting systems, analytical models</p>
-    </section>
-
-    <!-- EDUCATION -->
-    <section id="education" class="page">
-      <h1>Education</h1>
-      <p>MBA in Business Analytics</p>
-    </section>
-
-    <!-- ACHIEVEMENTS -->
-    <section id="achievements" class="page">
-      <h1>Achievements</h1>
-      <p>Certifications and professional achievements will be listed here.</p>
-    </section>
-
-    <!-- CONTACT -->
+    <!-- CONTACT (RESTORED) -->
     <section id="contact" class="page">
       <h1>Contact</h1>
-      <p>Email: lakshmitejakumar.sriperumbuduru@gmail.com</p>
-      <p>Phone: +91 7093008246</p>
+      <p><strong>Email:</strong> lakshmitejakumar.sriperumbuduru@gmail.com</p>
+      <p><strong>Phone:</strong> +91 7093008246</p>
       <p>
-        LinkedIn:
-        <a href="https://www.linkedin.com/in/lakshmitejakumar-sriperumbuduru-61475b2a8" target="_blank">
+        <strong>LinkedIn:</strong>
+        <a href="https://www.linkedin.com/in/lakshmitejakumar-sriperumbuduru-61475b2a8"
+           target="_blank">
           View Profile
         </a>
       </p>
@@ -333,12 +315,23 @@
     <!-- RESUME -->
     <section id="resume" class="page">
       <h1>Resume</h1>
-      <p>Resume preview and download will be available here.</p>
+      <div class="resume-frame">
+        <iframe src="sources/Lakshmi_Teja_Kumar.pdf" width="100%" height="100%" style="border:none;"></iframe>
+      </div>
+      <div class="resume-actions">
+        <a class="preview-btn"
+           onclick="document.querySelector('#resume iframe').scrollIntoView({behavior:'smooth'})">
+          Preview
+        </a>
+        <a class="download-btn"
+           href="sources/Lakshmi_Teja_Kumar.pdf" download>
+          Download
+        </a>
+      </div>
     </section>
 
   </div>
 
-  <!-- RIGHT IMAGE -->
   <div class="profile">
     <img src="sources/profile_new.png">
     <div class="caption">
