--- a/index.html
+++ b/index.html
@@ -273,40 +273,78 @@
       <p>
         Enterprise Data Analyst with 4 years of professional experience delivering
         scalable business intelligence solutions, KPI-driven dashboards, and
-        data-backed insights.
+        data-backed insights. Known for bridging the gap between business needs
+        and analytical solutions through strong stakeholder collaboration and
+        technical expertise.
       </p>
       <a class="contact-btn" onclick="show('contact')">Contact Me</a>
     </section>
 
-    <!-- ABOUT -->
+    <!-- ABOUT (FULLY RESTORED) -->
     <section id="about" class="page">
       <h1>About Me</h1>
+
       <p>
         I am a data professional with 4 years of hands-on experience, most recently
-        working as a Data Analyst (Power BI Developer) at NIQ.
+        working as a Data Analyst (Power BI Developer) at NIQ, a global market
+        research organization with over a century of industry presence.
       </p>
+
       <p>
-        I work across the complete analytics lifecycle, combining business
-        understanding with technical expertise to deliver scalable solutions.
+        I have strong experience across the complete analytics lifecycle,
+        including requirement gathering, data preparation, dashboard development,
+        and insight delivery. I regularly collaborated with stakeholders to define
+        KPIs and translate business problems into scalable analytical solutions.
+      </p>
+
+      <p>
+        My approach combines solid business and administrative understanding with
+        technical expertise, enabling me to design analytics solutions that are
+        both practical and impactful.
+      </p>
+
+      <h3>Key Responsibilities</h3>
+      <ul>
+        <li>Data gathering and consolidation from multiple sources</li>
+        <li>Stakeholder meetings to finalize business and reporting requirements</li>
+        <li>Data cleaning, transformation, and validation</li>
+        <li>Designing and developing Power BI dashboards</li>
+        <li>Enhancing dashboards using semantic models</li>
+        <li>Implementing Row-Level Security (RLS)</li>
+      </ul>
+
+      <h3>Tools & Technologies</h3>
+      <p>
+        Power BI, Advanced Excel, DAX, Data Modelling, MySQL, SQL Server, SSMS,
+        VBA, Python, Tableau
+      </p>
+
+      <h3>Domain Experience</h3>
+      <p>
+        Market Research (NIQ) and Retail Analytics
+      </p>
+
+      <h3>Career Focus</h3>
+      <p>
+        Data Analyst | Power BI Developer | Data Scientist
       </p>
     </section>
 
-    <!-- EMPTY SECTIONS -->
+    <!-- EMPTY PLACEHOLDERS -->
     <section id="experience" class="page"><h1>Experience</h1></section>
     <section id="skills" class="page"><h1>Skills</h1></section>
     <section id="projects" class="page"><h1>Projects</h1></section>
     <section id="education" class="page"><h1>Education</h1></section>
     <section id="achievements" class="page"><h1>Achievements</h1></section>
 
-    <!-- CONTACT (RESTORED) -->
+    <!-- CONTACT -->
     <section id="contact" class="page">
       <h1>Contact</h1>
       <p><strong>Email:</strong> lakshmitejakumar.sriperumbuduru@gmail.com</p>
       <p><strong>Phone:</strong> +91 7093008246</p>
       <p>
         <strong>LinkedIn:</strong>
-        <a href="https://www.linkedin.com/in/lakshmitejakumar-sriperumbuduru-61475b2a8"
-           target="_blank">
+        <a href="https://www.linkedin.com/in/lakshmitejakumar-sriperumbuduru-61475b2a8" target="_blank">
           View Profile
         </a>
       </p>
@@ -315,16 +353,17 @@
     <!-- RESUME -->
     <section id="resume" class="page">
       <h1>Resume</h1>
+
       <div class="resume-frame">
         <iframe src="sources/Lakshmi_Teja_Kumar.pdf" width="100%" height="100%" style="border:none;"></iframe>
       </div>
+
       <div class="resume-actions">
         <a class="preview-btn"
            onclick="document.querySelector('#resume iframe').scrollIntoView({behavior:'smooth'})">
           Preview
         </a>
-        <a class="download-btn"
-           href="sources/Lakshmi_Teja_Kumar.pdf" download>
+        <a class="download-btn" href="sources/Lakshmi_Teja_Kumar.pdf" download>
           Download
         </a>
       </div>
